# cargo-mephi

./: Cargo.toml  LICENSE
src/: crate_toml.rs  main.rs  workspace_toml.rs
